# bart-python

./: README.adoc  README.md  conftest.py  pyproject.toml  taskell.md
bart/: cli.py  config.py  exceptions.py  project.py  templates.py  utilites.py
bart/actions/: build.py  joins.py  splits.py
bart/converters/: adoc.py  api.py  md.py
bart/markup/: asciidoc_or.py
bart/templates/: _manuscript.scss  _xrefs.scss  manuscript.css  manuscript.css.map  reference.docx
docs/: 00-bart.adoc  10-philosophy.adoc  20-project-organization.adoc  21-supported-filetypes.adoc  22-document-metadata.adoc  30-commands-and-actions.adoc  40-building-documents-and-other-output.adoc
tests/: test_config.py  test_project.py  test_tempaltes.py  test_utilities.py
tests/actions/: test_build.py  test_joins.py
tests/converters/: test_adoc.py  test_api.py  test_md.py
tests/markup/: test_asciidoc_or.py
tests/projects/adoc/: 00-tests-projects-adoc.adoc  01-chapter-one.adoc  02-chapter-two.adoc  03-chapter-three.adoc
tests/projects/md/: 00-tests-projects-md.md
