[tool.poetry]
name = "bart"
version = "0.1.0"
description = "A project management tool for plain-text writing workflows."
authors = ["delfanbaum <drelfanbaum@gmail.com>"]
readme = "README.adoc"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
asciidoc = "^10.2.0"
markdown2 = "^2.4.11"
smartypants = "^2.0.1"
textual = "^0.44.1"
tomlkit = "^0.12.3"
weasyprint = "^60.2"
python-docx = "^1.1.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
coverage = "^7.3.2"
textual-dev = "^1.2.1"
freezegun = "^1.3.1"

[tool.poetry.scripts]
bart = "bart.cli:app"

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
reportMissingImports = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
